<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SymptomManagement</string>
    <string name="menu_doctor_dashboard">Doctor Dashboard</string>
    <string name="menu_patient_profile">Patient Profile</string>
    <string name="header_login">Please Login...</string>
    <string name="header_activity_doctor_dashboard">Doctor Dashboard</string>
    <string name="header_activity_doctor_patient_add">Add Patient</string>
    <string name="header_activity_doctor_update_meds">Update Patient Medications</string>
    <string name="header_activity_patient_update_preferences">Update Preferences</string>
    <string name="header_check_in">Check In</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_medical_record_id">Medical Record ID</string>
    <string name="label_patient_profile_name">Name:</string>
    <string name="label_patient_profile_medical_record_id">Medical Record ID:</string>
    <string name="label_patient_profile_medications">Medications:</string>
    <string name="label_patient_profile_doctor">Doctor:</string>
    <string name="label_reminder_one">Reminder One:</string>
    <string name="label_reminder_two">Reminder Two:</string>
    <string name="label_reminder_three">Reminder Three:</string>
    <string name="label_reminder_four">Reminder Four:</string>
    <string name="label_pain">Pain:</string>
    <string name="label_appetite">Appetite:</string>
    <string name="label_medications_taken">Medications Taken:</string>
    <string name="label_did_you_take">Did you take</string>
    <string name="label_date">Date:</string>
    <string name="label_time">Time:</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="doctor">Doctor</string>
    <string name="action_settings">Settings</string>
    <string name="name_doctor">Doctor Name</string>
    <string name="name_patient">Patient Name</string>
    <string name="search_patients">Search Patients</string>
    <string name="button_submit">Submit</string>
    <string name="button_go">Go</string>
    <string name="button_edit">Edit</string>
    <string name="button_check_in">Check In</string>
    <string name="button_update_preferences">Update Preferences</string>
    <string name="button_save_reminders">Save Reminders</string>
    <string name="button_save_check_in">Save Check In</string>
    <string name="button_patient_list">View Patient List</string>
    <string name="button_add_new_patient">Add New Patient</string>
    <string name="button_update_medications">Update Medications</string>
    <string name="button_view_patient_pain">View Patient Pain</string>
    <string name="button_view_patient_appetite">View Patient Appetite</string>
    <string name="button_add_medication">Add Medication</string>
    <string name="button_delete_medication">Delete</string>
    <string name="button_save_patient_medications">Save Patient Medications</string>
    <string name="title_activity_doctor_patient_list">Patient List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_doctor_patient_add">Add Patient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_doctor_patient_profile">Patient Profile</string>
    <string name="title_activity_doctor_update_medications">Update Medications</string>
    <string name="title_activity_patient_profile">Patient Profile</string>
    <string name="title_activity_patient_preferences">Patient Preferences</string>
    <string name="title_activity_patient_check_in">Patient Check In</string>
    <string name="title_activity_reminder_alert">Reminder Alert</string>

</resources>
