<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.coursera.symptommanagement.activities.doctor.DoctorUpdateMedicationsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_activity_doctor_update_meds"
        android:id="@+id/textView"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
        android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
        android:layout_below="@+id/medicationListName"
        android:layout_marginTop="@dimen/activity_horizontal_margin_2x"
        android:id="@+id/medicationSpinner">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerMedications"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_medication"
            android:id="@+id/buttonAddMedication"
            android:layout_gravity="bottom|right"
            android:onClick="addMedicationButtonClicked"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medicationSpinner"
        android:layout_marginTop="@dimen/activity_horizontal_margin_2x"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
        android:layout_marginRight="@dimen/activity_vertical_margin_2x">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/scrollView"
            android:scrollbars="horizontal|vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:isScrollContainer="true"
                android:id="@+id/updateMedicationsTable"></TableLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_patient_medications"
            android:id="@+id/buttonSavePatientMeds"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
            android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
            android:onClick="savePatientMedications" />
    </LinearLayout>
</RelativeLayout>
