<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.coursera.symptommanagement.activities.patient.PatientProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Patient Profile"
        android:id="@+id/patientProfile"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_2x"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/layoutPatientInfo">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView2"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                android:text="@string/label_patient_profile_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/patientProfileFirstName"
                android:layout_marginLeft="@dimen/input_label_space"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/patientProfileLastName"
                android:layout_marginLeft="@dimen/input_label_space"
                android:layout_marginTop="@dimen/activity_vertical_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_patient_profile_doctor"
                android:id="@+id/textView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/patProfileDoctorFirstName"
                android:layout_marginLeft="@dimen/input_label_space"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/patProfileDoctorLastName"
                android:layout_marginLeft="@dimen/input_label_space"
                android:layout_marginTop="@dimen/activity_vertical_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_patient_profile_medical_record_id"
                android:id="@+id/textView3"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/patientProfileMedicalRecordId"
                android:layout_marginLeft="@dimen/input_label_space" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/layoutPatientInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_patient_profile_medications"
            android:id="@+id/textView4"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/scrollView"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
            android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
            android:scrollbars="horizontal|vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/activity_vertical_margin_2x">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:isScrollContainer="true"
                android:id="@+id/patientProfileMedicationTable"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
                android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
                ></TableLayout>
        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_check_in"
            android:id="@+id/buttonCheckIn"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
            android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_preferences"
            android:id="@+id/buttonUpdatePreferences"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
            android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin" />
    </LinearLayout>
</RelativeLayout>
